--- a/package.json
+++ b/package.json
@@ -100,5 +100,9 @@
       "admin/",
       "packages/"
     ]
+  },
+  "dependencies": {
+    "librechat-data-provider": "^0.5.8",
+    "passport-okta-oauth": "^0.0.1"
   }
 }
