--- a/librechat.example.yaml
+++ b/librechat.example.yaml
@@ -21,7 +21,7 @@ interface:
 
 # Example Registration Object Structure (optional)
 registration:
-  socialLogins: ['github', 'google', 'discord', 'openid', 'facebook']
+  socialLogins: ['github', 'google', 'discord', 'openid', 'facebook','okta']
   # allowedDomains:
   # - "gmail.com"
 
